feat(nvim: split profiles and automate toolchain
Differentiate between Work (Nvimdots) and Personal (LazyVim)
configurations to suit distinct workflow requirements.

- Separate Neovim sources based on the `is_work` flag.
- Integrate `mise` for Node, Rust, and Python versioning.
- Update installation scripts to compile `tree-sitter-cli`.
- Expand system package lists with build dependencies.)

--- a/src/.chezmoiignore
+++ b/src/.chezmoiignore
@@ -18,3 +18,10 @@ Documents/
 .config/lxqt/
 .chezmoiscripts/linux/
 {{- end }}
+
+{{ if .is_work -}}
+dot_config/nvim/lua/config/
+dot_config/nvim/lua/plugins/
+{{ else -}}
+dot_config/git/config_work.tmpl
+{{- end }}
