refactor(core): adopt profile-based configuration
Replace binary state flags with a unified profile system (`work`,
`personal`, `minimal`) to improve context awareness and flexibility.

- Centralize user identity and SSH key derivation logic.
- Update Git, SSH, and Neovim templates to respect the active profile.
- Optimize `zshrc` by treating it as a static file.
- Adjust script execution order and improve SSH key indexing.

--- a/src/.chezmoiignore
+++ b/src/.chezmoiignore
@@ -19,7 +19,7 @@ Documents/
 .chezmoiscripts/linux/
 {{- end }}
 
-{{ if .is_work -}}
+{{ if eq .profile "work" -}}
 dot_config/nvim/lua/config/
 dot_config/nvim/lua/plugins/
 {{ else -}}
