chore(nvim): remove local configuration overlays
Delete custom Lua options and plugins to rely fully on the external
starter templates.

- Remove `options.lua` and `chezmoi.lua`.
- Clean up obsolete ignore rules in `.chezmoiignore`.

--- a/src/.chezmoiignore
+++ b/src/.chezmoiignore
@@ -19,9 +19,6 @@ Documents/
 .chezmoiscripts/linux/
 {{- end }}
 
-{{ if eq .profile "work" -}}
-dot_config/nvim/lua/config/
-dot_config/nvim/lua/plugins/
-{{ else -}}
+{{ if ne .profile "work" -}}
 dot_config/git/config_work.tmpl
 {{- end }}
