--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,8 +1,3 @@
-README.md
-install.sh
-install.ps1
-.git/
-.gitignore
 **/.gitkeep
 
 {{ if ne .chezmoi.os "windows" }}
@@ -20,5 +15,5 @@ Documents/
 {{- end }}
 
 {{ if ne .profile "work" -}}
-dot_config/git/config_work.tmpl
+.config/git/config_work.tmpl
 {{- end }}
