--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -14,6 +14,6 @@ Documents/
 .chezmoiscripts/linux/
 {{- end }}
 
-{{ if ne .profile "work" -}}
+{{ if ne .environment "work" -}}
 .config/git/config_work.tmpl
 {{- end }}
