--- a/home/dot_config/mise/mise.toml
+++ b/home/dot_config/mise/mise.toml
@@ -1,5 +1,6 @@
 [tools]
 bat = "latest"
+bitwarden = "latest"
 btop = "latest"
 cargo = "latest"
 chezmoi = "latest"
@@ -9,6 +10,7 @@ fd = "latest"
 fzf = "latest"
 github-cli = "latest"
 go = "latest"
+jq = "latest"
 lazygit = "latest"
 lsd = "latest"
 neovim = "latest"
