fix(ignore): use recursive globs for exclusions
Update directory ignore patterns to include `/**`. This ensures
that all subdirectories and files within the specified paths are
correctly excluded during the apply process.

--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,17 +1,17 @@
 **/.gitkeep
 
 {{ if ne .chezmoi.os "windows" }}
-AppData/
-Documents/
+AppData/**
+Documents/**
 .chezmoiscripts/windows/
 {{- end }}
 
 {{ if ne .chezmoi.os "linux" }}
 .bashrc
 .zshrc
-.config/mpd/
-.config/lxqt/
-.chezmoiscripts/linux/
+.config/mpd/**
+.config/lxqt/**
+.chezmoiscripts/linux/**
 {{- end }}
 
 {{ if ne .environment "work" -}}
